stopped nav logo overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,7 @@ body {
       top: 30px;
     }
     .nav-logo {
-      left: -45px;
+      left: 10px;
     }
     #topLink {
       opacity: 1;
